--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="gameBoard">
 
             <div class="deck">
-                <div id="deckcount">52</div>
+                <div id="deckCount">52</div>
             </div>
             
             <div class="status" id="status">Click "Start" to Play</div>
@@ -56,7 +56,8 @@
                     <p class="rulesList">
                         All the players include the dealer will receives two cards face up. Thus, all players on the table will know the score of each other. <br />
                         The player will have chance to compete with the dealer since their turn first and they have alreday known the dealer's score. <br />
-                        The dealer will have chance to compete with the player because they've known the player score and will decide whether to continue or stop the game to compete player's score.    
+                        The dealer will have chance to compete with the player because they've known the player score and will decide whether to continue or stop the game to compete player's score.
+                        BLACKJACK mean : total score of card on hand is 21 points. Blackjack will pop up either way right after frist render card or when the game is being operated. The winning effective immediately and game end.   
                     </p>
                     <p class="rulesList">
                         THE PLAYER'S TURN
